test_programs/compile_failure/noirc_frontend_tests_visibility_errors_if_pub_struct_field_leaks_private_type_in_generic/src/main.nr

    pub mod moo {
        struct Bar {}
        pub struct Foo<T> { pub value: T }
        pub struct FooBar { pub value: Foo<Bar> }

        pub fn no_unused_warnings() {
            let _ = FooBar { value: Foo { value: Bar {} } };
        }
    }
    fn main() {}
    